# miniature-octo-palm-tree

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
claimlens/: demo_cases.py
claimlens/agents/: checklists.py
claimlens/api/: dashboard.py  main.py
claimlens/core/: cases.py  ingestion.py  models.py  pipeline.py  retrieval.py
claimlens/data_sources/: __init__.py  nhtsa.py
claimlens/evaluators/: faithfulness.py  harness.py
claimlens_api/: __init__.py  main.py  models.py  pipeline.py
datasets/evals/: vehicle_safety_cases.json
datasets/synthetic_claims/: rear_end_collision_case_001.md
datasets/synthetic_claims/rear_end_collision_case_001/: case.json
docs/: architecture.md  evaluation.md  mis-transition.md  roadmap.md
docs/superpowers/plans/: 2026-07-05-case-workspace-backbone.md
infra/: docker-compose.yml
scripts/: demo_case.py  import_nhtsa_case.py  run_eval.py
tests/: test_api_cases.py  test_api_evaluations.py  test_api_nhtsa.py  test_cases.py  test_claimlens.py  test_dashboard.py  test_demo_cases.py  test_evaluations.py  test_nhtsa_data_source.py  test_pipeline.py
