[project]
name = "claimlens"
version = "0.1.0"
description = "Multimodal evidence intelligence platform for claim and compliance review"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["claimlens_api*"]
exclude = ["datasets*", "tests*", "docs*", "scripts*"]
