[project]
name = "claimlens"
version = "0.1.0"
description = "Multimodal evidence intelligence scaffold for AI engineering portfolio work."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "certifi>=2024.0.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["claimlens*"]
